--- a/Frontend/HealthClubManagement/src/App.css
+++ b/Frontend/HealthClubManagement/src/App.css
@@ -1,42 +1,129 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
+:root
+{
+    
+    --main--color:#ff2332;    
+    --primary--color:#ff662d;    
+    --dark--color:#37383c;    
+    --darklight--color:#3a3b3f;    
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+body
+{
+    font-family: "Inter", serif;
+}
+ a{
+    text-decoration: none;
+    color: #fff;
+ }
+ ul
+ {
+    list-style: none;
+ }
+ /**********************************************/
+ .logo
+ {
+     width: 20%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.Nav_Main{
+    position: relative;
+    z-index: 100;
+    padding: 1rem 0;
+    background: rgb(20, 20, 20);
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.Nav_Main a{
+    color: #fff;
+    font-size: 1rem;
+    letter-spacing: 0.4px;
+    /* font-weight: 300; */
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Nav_Main li{
+padding: 0 1rem; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.Nav_Main a:hover,
+.Nav_Main a:focus{
+    color: var(--main--color) !important;
+}
+.btn1
+{
+border: 0;
+padding: 0.7rem 1.55rem;
+background-color: var(--main--color);
+color: #fff;
+border-radius: 8px;
+font-weight: 500;
+letter-spacing: 0.4px;
+}
+/**********************************************/
+.Hero
+{
+    background-image: url("./assets/Home1.jpg");
+    height: 600px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 5rem;
+   
+}
+.Hero_col1 h1 {
+    font-size: 3rem;
+    font-weight: 800;
+    color: #fff;
+    text-transform: uppercase;
+}
+.Hero_col1 p {
+    font-size: 1.2rem;
+    padding: 1rem 0;
+    color: #fff;
+}
+.Hero_col2_img
+{
+width: 100%;
+}
+span{
+    color: var(--primary--color);
+}
+.btn0
+{
+    padding: 0.9rem 1.8rem;   
+    font-size: 1.2rem;
+}
+.play_btn
+{
+    background-color: transparent;
+    border: 0; 
+    color: white;   
+    padding: 1rem;
+    font-weight: 500;
+    font-size: 1.2rem; 
+  
+}
+.play_btn img{
+
+    width: 60px;
+    border-radius: 100%;
+    padding: 0.5rem 0.5rem 0.5rem 0.6rem;
+    margin: 0 0.5rem;
+}
+/*********************************/
+.Hero1
+{
+    background-image: url("./assets/HomeBack1.jpg");
+    height: 605px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 5rem;
+   
 }
 
-.card {
-  padding: 2em;
-}
 
-.read-the-docs {
-  color: #888;
-}
+/* ****************************************** */
